# aud-src-sep

./: .gitignore  README.md  cross-track.py  data-conv.py  demo.ipynb  download_data.py  download_musdb.py  eval.ipynb  pyproject.toml  requirements.txt  setup.py
eval_data/: sample_reference.wav.asd
logs/: train-log1.txt  train-log2.txt  train-log3.txt
notebooks/: demo.ipynb  eval.ipynb  run_training.ipynb  training-loop.ipynb  validation.ipynb
src/: cross-track.py  crosstrack.py  dataloader.py  model.py  models.py  preprocess.py  train_model.py
weights/: anti_artifact_model_final.pth  train_weights2.pth  train_weights3.pth
