[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_separation_project"
version = "0.1.0"
description = "Audio Stem Source Separation via Cross-Track Attention"
dependencies = [
    "torch",
    "torchaudio",
    "torchmetrics",
    "librosa",
    "matplotlib",
    "soundfile",
    "scipy",
    "numpy",
    "jupyter",
    "kaggle"
]